projects/vb6parse/snapshots/syntax/library/statements/date/date_at_module_level.snap
---
source: projects/vb6parse/src/syntax/library/statements/runtime_state/date.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DateStatement
      children:
        - kind: DateKeyword
          text: Date
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: LiteralExpression
          children:
            - kind: DateLiteral
              text: "#1/1/2024#"
    - kind: Newline
      text: "\n"
