projects/vb6parse/snapshots/syntax/library/statements/date/multiple_date_statements.snap
---
source: projects/vb6parse/src/syntax/library/statements/runtime_state/date.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DateKeyword
                  text: Date
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: LiteralExpression
                  children:
                    - kind: DateLiteral
                      text: "#1/1/2024#"
            - kind: Newline
              text: "\n"
            - kind: DateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DateKeyword
                  text: Date
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: LiteralExpression
                  children:
                    - kind: DateLiteral
                      text: "#2/1/2024#"
            - kind: Newline
              text: "\n"
            - kind: DateStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DateKeyword
                  text: Date
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: LiteralExpression
                  children:
                    - kind: DateLiteral
                      text: "#3/1/2024#"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
